--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,9 @@
 
   --button-primary: #e8e8e8;
   --button-hover: #F2F2F2;
-  /* --button-border: #b4c7dd; */
   --button-border: #646cff;
 
   overflow: hidden;
-  /* overscroll-behavior: none; */
   touch-action: none;
 }
 
@@ -34,7 +32,9 @@
 #root {
   display: flex;
   flex-flow: column;
-  height: 100vh;
+  /* "Small viewport height" to account 
+  for navigation bar on mobile */
+  height: 100svh; 
 }
 #root .header {
   flex: 0 1 auto;
@@ -55,28 +55,11 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
+  height: 100%;
+  /* height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available; */
   margin: 0;
-  /* display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh; */
 }
-
-/* h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-} */
-
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
